[project]
name = "crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.13",
    "ipython>=9.4.0",
    "loguru>=0.7.3",
    "numpy>=2.3.1",
    "polars>=1.31.0",
    "termplotlib>=0.3.9",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
]
[project.scripts]
crawler = "crawler:cli"


[tool.hatch.build.targets.wheel]
packages = ["src/crawler"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
